--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1342,7 +1342,7 @@
     "        }\n",
     "    return pd.DataFrame.from_dict(variance_results, orient='index')\n",
     "\n",
-    "# Perform varience tests across my data\n",
+    "# Perform varience tests across relative data sets\n",
     "results_male_variance_before = levene_test(control_male_df, cold_male_df, columns_to_analyse)\n",
     "results_female_variance_before = levene_test(control_female_df, cold_female_df, columns_to_analyse)\n",
     "results_male_variance_after = levene_test(control_male_df, cold_male_df, columns_to_analyse, suffix=\" After\")\n",
@@ -1371,7 +1371,8 @@
     "sample. Thus, data derived from female participants and other \n",
     "non- normally distributed data were analysed using the Wilcoxon \n",
     "signed- rank test \"\n",
-    "However, the BMI was not normally distributed in the Males. "
+    "However, the BMI was not normally distributed in the Males. \n",
+    "The Varience between the Intervention / Control seem to be fairly matched. "
    ]
   },
   {
